RESOLVED FIXED237528
[MSE][SourceBuffer] Fix creating float PTS/DTS when dividing sample
https://bugs.webkit.org/show_bug.cgi?id=237528
Summary [MSE][SourceBuffer] Fix creating float PTS/DTS when dividing sample
Enrique Ocaña
Reported 2022-03-07 06:42:45 PST
The timestamps used for sample division in SourceBuffer aren't being aligned with the same rounding margin used in SourceBuffer::sourceBufferPrivateDidReceiveSample().
Attachments
Patch (4.12 KB, patch)
2022-03-07 12:16 PST, Enrique Ocaña
no flags
Patch (4.12 KB, patch)
2022-03-08 02:47 PST, Enrique Ocaña
no flags
Enrique Ocaña
Comment 1 2022-03-07 12:16:38 PST
Enrique Ocaña
Comment 2 2022-03-08 02:47:28 PST
EWS
Comment 3 2022-03-10 04:04:25 PST
Committed r291101 (248263@main): <https://commits.webkit.org/248263@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 454090 [details].
Radar WebKit Bug Importer
Comment 4 2022-03-10 04:05:16 PST
Note You need to log in before you can comment on or make changes to this bug.